[package]
edition = "2018"
readme = "README.md"
name = "mcu_fourtris"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
tm4c123x = "0.9.0"
fourtris = { git = "https://github.com/bollo35/fourtris" , features = ["partial_redraw"] }

# this lets you use `cargo fix`!
[[bin]]
name = "mcu_fourtris"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
